--- a/install-package.yaml
+++ b/install-package.yaml
@@ -5,7 +5,7 @@
   nodefilters:
     dispatch:
       excludePrecedence: true
-      keepgoing: false
+      keepgoing: true
       rankOrder: ascending
       threadcount: 1
     filter: .*
